feat(gcn-testsite): rebuild [skip ci]

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "homepage": "https://github.com/zgrybus/ph-demo",
   "dependencies": {
+    "@fontsource/poppins": "^5.0.8",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
